# Oxidized-Vision

./: .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  agenda.md  pyproject.toml
.agent/workflows/: agenda.md
.github/workflows/: benchmarks.yml  ci.yml  publish.yml
benchmarks/: run_benchmark.py
docs/: architecture.md
examples/: notebook_flowmatch.ipynb  quickstart.md
examples/example_unet/: config.yml  model.py
python_client/oxidizedvision/: __init__.py  benchmark.py  cli.py  config.py  convert.py  logging.py  optimize.py  profile.py  registry.py  validate.py
python_client/oxidizedvision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python_client/tests/: __init__.py  conftest.py  test_benchmark.py  test_cli.py  test_config.py  test_convert.py  test_profile.py  test_registry.py  test_validate.py
rust_runtime/: Cargo.toml
rust_runtime/crates/runner_core/: Cargo.toml
rust_runtime/crates/runner_core/src/: lib.rs
rust_runtime/crates/runner_tch/: Cargo.toml
rust_runtime/crates/runner_tch/src/: lib.rs
rust_runtime/crates/runner_tensorrt/: Cargo.toml
rust_runtime/crates/runner_tensorrt/src/: lib.rs
rust_runtime/crates/runner_tract/: Cargo.toml
rust_runtime/crates/runner_tract/src/: lib.rs
rust_runtime/examples/denoiser_cli/: Cargo.toml  main.rs
rust_runtime/examples/image_server/: Cargo.toml  main.rs
rust_runtime/examples/wasm_frontend/: Cargo.toml  index.html
rust_runtime/examples/wasm_frontend/src/: lib.rs
tools/: convert.py  export_to_onnx.py  optimize_onnx.py
