[package]
name = "image_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
runner_tract = { path = "../../crates/runner_tract" }
runner_tch = { path = "../../crates/runner_tch" }
ndarray = "0.15"
image = "0.24"
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
