[package]
name = "image_server"
version = "0.1.0"
edition = "2021"
description = "OxidizedVision inference server with REST API."

[dependencies]
runner_core = { path = "../../crates/runner_core" }
runner_tract = { path = "../../crates/runner_tract" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
image = "0.24"
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
