[package]
name = "image_server"
version = "0.1.0"
edition = "2021"
description = "OxidizedVision inference server with REST API, dynamic batching, and multi-model support."

[dependencies]
runner_core = { path = "../../crates/runner_core" }
runner_tract = { path = "../../crates/runner_tract" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
image = "0.24"
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
uuid = { version = "1", features = ["v4"] }
