[package]
name = "wasm_frontend"
version = "0.1.0"
edition = "2021"
description = "OxidizedVision WASM frontend for browser-based inference."

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
runner_core = { path = "../../crates/runner_core" }
runner_tract = { path = "../../crates/runner_tract" }
ndarray = "0.15"
console_error_panic_hook = "0.1"
serde_json = "1.0"
